lab1/Test/L1-A-4-17.cmm
{
  int QqvbSGvI0gaqLcSkr4g [ 726860469 ] = - oNcn ( 
    ! V6EB = r6QYCnu2uVFCFbC ) [ ! mJmym = phWJchqYx ] 
    [ avGI ( S74xTWq8CAx8OOpRy6L6 ) . c5 . rqfVU6ISDz4H 
    = ccY34qSm ] [ ! xe6U0ED3Y8H3pgYbeV / oZa6qxSFHNd92E 
    * o1BRcYZ4ZKWcvFQg * IzXpj5L * sk1dW3oYWNVW82I + Wlxvu2z 
    + Sclc3B9cviXDj59 - R2AYm4 - C1_yLJ + r6j6lWkb - xX4KS4SuF3HWxF 
    != fp0zxOT == srE8QHXIt == _hdzek06akN >= nj < I == 
    rTMdMRtWzcZ3Z < D5BMnJ0wVD7jE >= Izb7U2_WT3hskTUfHXi 
    != kZefvXGg3aripj > T3fzFnBwx12c0fyJr && YVDYh || 
    B1lDIQ8nyVop5O || MsrxezkXT0h || BGISTXa2mCaS || jvFW8pYiYTuRx4u7r 
    || uVDCFkbnovkAD ] [ - lmL7o * L7 - AvRzVaXh2fXRMUgu7oi 
    - OCVphYd5Jp2bDZxJ - r4tQ < BVx <= fd < zL5t8quMmsSf_YVm7Fo 
    == BABk39 <= WzyvbQ89g2IiQykXea2 == vBGw3EJDk || P 
    || VDBBMuO8B6LbY ] * HxjsON3sct_ZbmqvQ ( jnagc2Rl 
    ) / ! - yrDLQCCKXTzEtD8 - ! y ( ) . CZSNgH11d6yn4A 
    - - ! gcQansk8goIep - 327915745.1208462740 [ taxXvGxB4 
    ] - ! - azF5GT0VQ3GEcnOm / RWvl + 1188671702 + ! - 
    g0j * dcgPoY4W1XqxYaHcio * wUjokS5jXhG2g5vd4 / yQOtbCEoSqIg2 
    / pnBLRaeoxi9C - YZlpsYvzN9 ( Lsmcl6GMGIxfXexaJnR 
    ) [ JYki14EPgj0 ] . rpSsp && DjE ( ) > FcZKDttCgUy_ 
    >= qrNbIYNwe < puzwrK < ytmMZrLLP233BEVaYD || - - 
    FtpLN1KvT58dAQ47kV / U0vI * d1wPvEU1KH2faC * J - HIGKshTEpAqQqvu 
    <= zZC0fRsH8_ZTzpx6Eih == tXlf7SFDUJWMi <= f < Q4MCHLNuhtqEDuHs 
    && Wgf0Adl6b_iM0nHC && CZ0HjPbm_JR && de5L || q4vYFflJHi_FkWRw9vG8 
    ( ) [ zqQmavRRA4uKsM ] / _ytHoV00ENVAeB7r / SQHRe 
    - pKoKiRlj - mH6zU9hkQx2EwPTX4 < zO >= iDspSZOV3J 
    != uVXGlTZ_2RFoodTBTpTY == ALFoQHshWfEEGapHy == wPm2 
    >= TcAYJKSSK != NVnqKcnQ5jRfcgDpXxU != ZoT3FPoeM1dIj4j 
    >= N6s3O30hVC9Z17i38cm <= TotvGt5uJ < u7M5TO7G1O4gz8uea4 
    < e7w8s9N0s < DWbeXoSzrYfnPeN <= mM42TADxORIvBIi >= 
    DoQNdiR8 && Y5EgINPonnSXb_FTx || qHwcmoDhL1Ee4 [ _yxFftrLbNawNjLTNIEM 
    ] + wrgE7YatRj4zM == lWFTy > ItshrF7D == GWVM9OPR6gyTSHv3kM 
    > wQt0v0L_R8o0lO > _ESZO , Pb [ 2101976178 ] = DzBaGkG0LFROPIXH2A 
    ( ) >= g_e0jM == fXlrXvEgVIvBb0dk3j3w > ikmLuIm , 
    feb_eaknwCdqTGIM = , trFt5NIIMBAtFPl ;
  float aq3jIn9rCDIcb = - - ! DPkpP95 = qx8 ( q2UrEtKLD 
    ) * fM6OHlb93SG191RqTk <= i8uw0q3GiD55lZD6M <= QW35pxD 
    != o28KQ2KCZT2IX_gzI || RLOVHf9kBBDGJG || ake_JVvTOwX_6bX6jD 
    || VOw || pY || r7 || X4nUWSUVBTIm3bglKp9c || || z1HabTa_YnE4sL 
    , BfoWK [ 1426286027 ] = - Njhgr < vEBHnj3_H_JMIQMD1Z8k 
    && he5 || mTwNy8VfUhc5nnItAb || epqmRHgFyv ;
}n4XEt301rIzBSN4SP [ 1643525157 ] , jcjsqESqA 

;
int ;
float Qpo0PIVAjwJy ( struct f {
== }oWehc ) {
  float Av4YOOiqx 498907702 ] [ 1050692953 ] [ 1892590839 
    ] [ 1510602490 ] ;
}
+ != 